Testing Flask App

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>One Piece Character Classifier</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="static/style.css">
 </head>
 <body>
     <div class="container">
@@ -24,7 +24,6 @@
         <div id="result"></div>
     </div>
     
-    <!-- JavaScript -->
-    <script src="app.js"></script>
+    <script src="static/app.js"></script>
 </body>
 </html>
