--- a/mobile.html
+++ b/mobile.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>One Piece Classifier - Mobile</title>
-    <link rel="stylesheet" href="static/mobile.css" />
+    <link rel="stylesheet" href="mobile.css" />
     <link
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
       rel="stylesheet"
@@ -163,6 +163,6 @@
       </div>
     </div>
 
-    <script src="static/mobile.js"></script>
+    <script src="mobile.js"></script>
   </body>
 </html>
